apps/servarr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6767
      targetPort: 6767
      protocol: TCP
  selector:
    app: bazarr
